[gd_scene load_steps=11 format=3 uid="uid://86xpch7auyjn"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_a1t5a"]
[ext_resource type="Texture2D" uid="uid://cqxg34ji58jgc" path="res://Imagenes/1729089595254.png_image.png" id="1_rqo2n"]
[ext_resource type="Texture2D" uid="uid://cvmi0smgr76ej" path="res://Imagenes/unnamed.png" id="2_ety1u"]
[ext_resource type="Texture2D" uid="uid://c8aw7vmlwyihp" path="res://Imagenes/738371-middle.png" id="3_13m7t"]
[ext_resource type="Script" path="res://enemigo.gd" id="5_2q3nt"]
[ext_resource type="Script" path="res://jugador.gd" id="6_cjfyl"]
[ext_resource type="Texture2D" uid="uid://t3tk5v4iw67d" path="res://MODELO SIN VIDA.png" id="7_e8rka"]
[ext_resource type="Texture2D" uid="uid://n4mhkp0fc8ei" path="res://MODELO CON VIDA.png" id="8_43bvj"]
[ext_resource type="Texture2D" uid="uid://dl0wcw8c1rqjc" path="res://R7.png" id="18_bfn21"]
[ext_resource type="Script" path="res://a√±a.gd" id="19_fwc8p"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_a1t5a")

[node name="Fondo" type="TextureRect" parent="."]
modulate = Color(0.633757, 0.633757, 0.633757, 1)
self_modulate = Color(0.36283, 0.362829, 0.362829, 1)
show_behind_parent = true
offset_right = 1152.0
offset_bottom = 647.0
texture = ExtResource("1_rqo2n")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Mesa" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -3.0
offset_top = 199.0
offset_right = 1150.0
offset_bottom = 645.0
texture = ExtResource("2_ety1u")
metadata/_edit_use_anchors_ = true

[node name="Enemigo" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(555, 296)
scale = Vector2(0.571111, 0.491436)
texture = ExtResource("3_13m7t")
script = ExtResource("5_2q3nt")

[node name="Jugador" type="Sprite2D" parent="."]
script = ExtResource("6_cjfyl")

[node name="vidaE" type="TextureProgressBar" parent="."]
top_level = true
texture_filter = 1
anchors_preset = -1
anchor_top = 0.0524691
anchor_right = 0.0486111
anchor_bottom = 0.441358
offset_left = -29.0
offset_top = -161.0
offset_right = 291.0
offset_bottom = -82.0
max_value = 5.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("7_e8rka")
texture_progress = ExtResource("8_43bvj")
metadata/_edit_use_anchors_ = true

[node name="vidaA" type="TextureProgressBar" parent="."]
top_level = true
texture_filter = 1
anchors_preset = -1
anchor_top = -0.532407
anchor_right = 0.0572917
offset_left = 805.0
offset_top = 687.0
offset_right = 1125.0
offset_bottom = 766.0
max_value = 5.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("7_e8rka")
texture_progress = ExtResource("8_43bvj")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="BOTONPRUEBA" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 497.0
offset_top = 472.0
offset_right = 606.0
offset_bottom = 627.0
texture_normal = ExtResource("18_bfn21")
stretch_mode = 0
script = ExtResource("19_fwc8p")
